[package]
name = "toml2json"
description = "Convert TOML to JSON"
license = "MIT"
version = "1.4.0"
authors = [
    "William Woodruff <william@yossarian.net>",
    "Kaiwen Wu <kps6362@hotmail.com>",
]
edition = "2021"
homepage = "https://github.com/kkew3/toml2json"
readme = "README.md"
keywords = ["cli", "toml", "json"]
categories = ["command-line-utilities", "development-tools", "encoding"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
